<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:textSize="@dimen/headingTextSize"
        android:textColor="@color/primaryTextColor"
        android:id="@+id/create_entry_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_create_entry"
        android:text="@string/entry_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createEntryNameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="44dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/primaryLightColor"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_entry_name_text_view" />

    <TextView
        android:id="@+id/create_entry_user_text_view"
        android:textSize="@dimen/headingTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_create_entry"
        android:gravity="center_horizontal"
        android:textColor="@color/primaryTextColor"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEntryNameEditTextView" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_create_entry"
        android:layout_margin="20dp"
        android:textSize="@dimen/button_text_padding"
        android:backgroundTint="@color/primaryLightColor"
        android:gravity="center_horizontal"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_entry_user_text_view" />

    <TextView
        android:id="@+id/create_entry_password_text_view"
        android:textSize="@dimen/headingTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_create_entry"
        android:gravity="center_horizontal"
        android:textColor="@color/primaryTextColor"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <EditText
        android:id="@+id/entryPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_create_entry"
        android:layout_margin="20dp"
        android:textSize="@dimen/button_text_padding"
        android:backgroundTint="@color/primaryLightColor"
        android:gravity="center_horizontal"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_entry_password_text_view" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_entry_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/save_the_entry"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryPass" />

    <include
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottomBarNav"
        layout="@layout/bottom_bar_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />


</androidx.constraintlayout.widget.ConstraintLayout>