<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primaryDarkColor"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:background="@color/primaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:textColor="@color/secondaryTextColor"
        android:id="@+id/Title_text_editpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/entry_title"
        android:textSize="@dimen/headingTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/titleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="@dimen/fab_margin"
        android:background="@color/primaryDarkColor"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/Title_text_editpage"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:textColor="@color/secondaryColor"
            android:id="@+id/editTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"

             />

        <ImageButton
            android:background="@color/secondaryColor"
            android:id="@+id/copyTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            app:srcCompat="@drawable/ic_baseline_assignment_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:textColor="@color/secondaryTextColor"
        android:id="@+id/user_text_editpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/user"
        android:textSize="@dimen/headingTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEdit"  />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/user_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="@dimen/fab_margin"
        android:background="@color/primaryDarkColor"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/user_text_editpage"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:textColor="@color/secondaryColor"
            android:id="@+id/editUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"

            />

        <ImageButton
            android:background="@color/secondaryColor"
            android:id="@+id/copyUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            app:srcCompat="@drawable/ic_baseline_assignment_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView

        android:id="@+id/pass_text_editpage"
        android:layout_width="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/password"
        android:textSize="@dimen/headingTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_edit"  />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/edit_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:background="@color/primaryDarkColor"
        app:layout_constraintTop_toBottomOf="@id/pass_text_editpage"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:textColor="@color/secondaryColor"
            android:id="@+id/editPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"

            />

        <ImageButton
            android:background="@color/secondaryColor"
            android:id="@+id/copyPass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            app:srcCompat="@drawable/ic_baseline_assignment_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container_edit_entry_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@color/primaryDarkColor"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_container"
        android:layout_marginBottom="30dp"
        >

        <ImageButton
            android:background="@color/secondaryColor"
            android:id="@+id/deleteEntry"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <ImageButton
            android:id="@+id/updateContent"
            android:elevation="10dp"
            android:background="@color/secondaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="0.45"
            app:srcCompat="@drawable/ic_baseline_check_box_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>